# claudiator

./: .gitignore  README.md  install-hooks.sh
.claude/skills/manual-test/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  ios-quality.yml  release.yml  server-release.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/claudiator/app/: ClaudiatorApp.kt  MainActivity.kt
android/app/src/main/java/com/claudiator/app/models/: ApiResponses.kt  AppNotification.kt  Device.kt  (+2 more)
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/claudiator/app/: HelpersTest.kt  ModelDecodingTest.kt  NotificationManagerTest.kt  SetupViewModelTest.kt  ThemeTest.kt  URLValidatorTest.kt  ViewModelTest.kt
docs/superpowers/plans/: 2026-03-29-android-app.md
docs/superpowers/specs/: 2026-03-29-android-app-design.md
hook/: Cargo.toml  README.md  deny.toml
hook/scripts/: install.ps1  install.sh  update.ps1  update.sh
hook/src/: cli.rs  config.rs  error.rs  event.rs  lib.rs  logger.rs  main.rs  payload.rs  raw_log.rs  sender.rs
hook/test-server/: Cargo.toml
hook/test-server/src/: main.rs
hook/tests/: pipeline.rs
ios/: .gitignore  .swiftformat  .swiftlint.yml  README.md  project.yml
ios/Claudiator/: ClaudiatorApp.swift  Info.plist
ios/Claudiator.xcodeproj/: project.pbxproj
ios/Claudiator.xcodeproj/xcshareddata/xcschemes/: Claudiator.xcscheme
ios/Claudiator/Assets.xcassets/LinuxLogo.imageset/: Contents.json
ios/Claudiator/Assets.xcassets/WindowsLogo.imageset/: Contents.json
ios/Claudiator/Models/: AppNotification.swift  Device.swift  Event.swift  Extensions.swift  Session.swift
ios/Claudiator/Services/: APIClient.swift  KeychainService.swift  NotificationManager.swift  NotificationService.swift  VersionMonitor.swift
ios/Claudiator/Theme/: AppTheme+Themes.swift  AppTheme.swift  ThemeManager.swift
ios/Claudiator/Utilities/: URLValidator.swift
ios/Claudiator/ViewModels/: AllSessionsViewModel.swift  DeviceListViewModel.swift  EventListViewModel.swift  SessionListViewModel.swift  SetupViewModel.swift
ios/Claudiator/Views/: AllSessionRow.swift  AllSessionsView.swift  DeviceDetailView.swift  DeviceGroupCard.swift  DeviceGroupHeader.swift  DeviceListView.swift  EventRow.swift  Helpers.swift  NotificationListView.swift  SessionDetailView.swift  SessionRow.swift  SettingsView.swift  SetupView.swift
ios/Claudiator/Views/Settings/: AppearanceSection.swift  DangerZoneSection.swift  ServerConfigSection.swift
ios/ClaudiatorTests/: HelperTests.swift  ModelDecodingTests.swift  NotificationManagerTests.swift  SetupViewModelTests.swift  ThemeTests.swift  URLValidatorTests.swift  ViewModelTests.swift
ios/ci_scripts/: ci_post_clone.sh  ci_pre_xcodebuild.sh
ios/scripts/: install-hooks.sh
plans/: 00-summary.md  01-phase1-foundation.md  02-phase2-integration.md  03-phase3-verification.md  04-api-contract.md  05-hooks-config.md  06-ios-app.md  06-ios-phase1-server-api.md  06-ios-phase2-project-setup.md  06-ios-phase3-views.md  06-ios-phase4-push.md  06-ios-phase5-distribution.md  06a-server-notification-table.md  06b-server-ping-and-endpoints.md  06c-server-apns-direct.md  06d-server-install-script.md  06e-ios-notification-infra.md  06f-ios-notification-ui.md  07-production-rollout.md  ARCHITECTURE.md
server/: .gitignore  API.md  APNS_SETUP.md  Cargo.toml  README.md  deny.toml  start-server.sh
server/scripts/: install.sh  seed.sh  update.sh
server/src/: apns.rs  auth.rs  config.rs  error.rs  fcm.rs  lib.rs  main.rs  notif_dedup.rs  router.rs  utils.rs
server/src/db/: migrations.rs  mod.rs  pool.rs  queries.rs
server/src/handlers/: admin.rs  devices.rs  events.rs  mod.rs  notifications.rs  ping.rs  push.rs  sessions.rs
server/src/models/: request.rs  response.rs
server/tests/: api_tests.rs  db_tests.rs  logging_tests.rs
(+40 files in other folders)
