[package]
name = "claudiator-hook"
version = "0.3.0"
edition = "2021"
description = "CLI hook that forwards Claude Code session events to a Claudiator server"
license = "MIT"
repository = "https://github.com/shahadishraq/claudiator"

[lib]
name = "claudiator_hook"
path = "src/lib.rs"

[[bin]]
name = "claudiator-hook"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
