[package]
name = "claudiator-server"
version = "0.4.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
bytes = "1.11.1"  # Security fix for RUSTSEC-2026-0007
time = "0.3.47"   # Security fix for RUSTSEC-2026-0009

[dev-dependencies]
axum-test = "16"
tokio-test = "0.4"
tempfile = "3"
base64 = "0.22"

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unreachable_pub = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
